--- a/app/src/main/res/layout/fragment_docking.xml
+++ b/app/src/main/res/layout/fragment_docking.xml
@@ -16,99 +16,64 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.fragment.DockingFragment"
-            android:background="@drawable/background5">
+            android:background="@drawable/img_goback">
 
-            <com.sendi.deliveredrobot.view.widget.RightAlarmView
-                android:id="@+id/rightAlarmView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <View
+                android:id="@+id/view33"
+                android:layout_width="540dp"
+                android:layout_height="@dimen/dp_344"
+                android:background="@drawable/shape_gradient_1a4fba_0e40a4_corners_10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
             <TextView
+                android:id="@+id/textView82"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="148dp"
                 android:text="@string/docking"
-                android:textColor="@color/color_4D6FBE"
-                android:textSize="@dimen/large_text_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline49"
-                app:layout_constraintTop_toTopOf="@+id/guideline94"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline49"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="841dp" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline95"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="865dp" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline94"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_begin="302dp" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline96"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_begin="400dp" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/dp_36"
+                app:layout_constraintEnd_toEndOf="@+id/view33"
+                app:layout_constraintStart_toStartOf="@+id/view33"
+                app:layout_constraintTop_toTopOf="@+id/view33" />
 
             <TextView
                 android:id="@+id/textViewBeginPush"
-                android:layout_width="336dp"
-                android:layout_height="88dp"
-                android:background="@drawable/selector_bg2_button"
+                android:layout_width="@dimen/dp_180"
+                android:layout_height="@dimen/dp_64"
+                android:background="@drawable/dialog_btn_true_bg"
                 android:gravity="center"
                 android:text="@string/begin_hand_push"
                 android:textColor="@color/white"
-                android:textSize="@dimen/mid_text_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline95"
-                app:layout_constraintTop_toTopOf="@+id/guideline96"
-                app:layout_constraintVertical_bias="0.0" />
+                android:textSize="@dimen/sp_30"
+                app:layout_constraintBottom_toBottomOf="@+id/view33"
+                app:layout_constraintEnd_toEndOf="@+id/view33"
+                app:layout_constraintStart_toStartOf="@+id/view33"
+                app:layout_constraintTop_toBottomOf="@+id/textView82" />
 
             <ImageView
                 android:id="@+id/imageViewDocking"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/guideline102"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:layout_width="@dimen/dp_210"
+                android:layout_height="@dimen/dp_188"
+                android:src="@drawable/robot_docking_img"
+                android:layout_marginBottom="@dimen/dp_24"
+                app:layout_constraintBottom_toTopOf="@+id/textView82"
+                app:layout_constraintEnd_toEndOf="@+id/view33"
+                app:layout_constraintStart_toStartOf="@+id/view33" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline102"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="800dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/hand_charg_docking_cl"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/hand_docking"
-            android:visibility="gone"
-            />
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:id="@+id/hand_charg_docking_cl"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="@drawable/hand_docking"-->
+<!--            android:visibility="gone"-->
+<!--            />-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
